[package]
name = "danlogs-tools"
version = "0.1.0"
edition = "2021"
authors = ["Dan Chiarlone"]
default-run = "dsls"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dsls"

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
anyhow = "1"